--- a/examples/templ/web/bulkupdate/bulkupdate.templ
+++ b/examples/templ/web/bulkupdate/bulkupdate.templ
@@ -98,6 +98,15 @@ templ page(users []userModel) {
 		<p>
 			You can see a working example of this code below.
 		</p>
+		<p>
+			<a
+				href="https://github.com/will-wow/typed-htmx-go/tree/main/examples/templ/web/bulkupdate"
+				target="_blank"
+				rel="noopener"
+			>
+				Source
+			</a>
+		</p>
 		<h2>Demo</h2>
 		@table(users)
 	}
