--- a/examples/templ/web/clicktoedit/clicktoedit.templ
+++ b/examples/templ/web/clicktoedit/clicktoedit.templ
@@ -122,6 +122,15 @@ templ page(form *form) {
 				If there is an error, the form swaps the form with error messages in place of the edit form.
 			</li>
 		</ul>
+		<p>
+			<a
+				href="https://github.com/will-wow/typed-htmx-go/tree/main/examples/templ/web/clicktoedit"
+				target="_blank"
+				rel="noopener"
+			>
+				Source
+			</a>
+		</p>
 		<h2>Demo</h2>
 		@viewForm(form)
 	}
