add active search example

--- a/examples/web/examples/extempl/examples.templ
+++ b/examples/web/examples/extempl/examples.templ
@@ -42,6 +42,11 @@ templ Page() {
 					"Bulk Update",
 					"Demonstrates bulk updating of multiple rows of data",
 				)
+				@exampleRow(
+					"/examples/templ/active-search",
+					"Active Search",
+					"Demonstrates the active search box pattern",
+				)
 			</tbody>
 		</table>
 	}
