--- a/examples/web/examples/extempl/examples.templ
+++ b/examples/web/examples/extempl/examples.templ
@@ -33,19 +33,24 @@ templ Page() {
 			</thead>
 			<tbody>
 				@exampleRow(
-					"/examples/templ/click-to-edit",
+					"/examples/templ/click-to-edit/",
 					"Click To Edit",
 					"Demonstrates inline editing of a data object",
 				)
 				@exampleRow(
-					"/examples/templ/bulk-update",
+					"/examples/templ/bulk-update/",
 					"Bulk Update",
 					"Demonstrates bulk updating of multiple rows of data",
 				)
 				@exampleRow(
-					"/examples/templ/active-search",
+					"/examples/templ/active-search/",
 					"Active Search",
 					"Demonstrates the active search box pattern",
+				)
+				@exampleRow(
+					"/examples/templ/progress-bar/",
+					"Progress Bar",
+					"Demonstrates a job-runner like progress bar",
 				)
 			</tbody>
 		</table>
