--- a/examples/web/static/main.css
+++ b/examples/web/static/main.css
@@ -20,7 +20,8 @@
   opacity: 1;
 }
 
-.progress-bar .progress {
+/*ex:start:progress-bar-style*/
+.progress-bar-demo .progress {
   height: 20px;
   margin-bottom: 20px;
   overflow: hidden;
@@ -28,7 +29,7 @@
   border-radius: 4px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-.progress-bar .progress-bar {
+.progress-bar-demo .progress-bar {
   float: left;
   width: 0%;
   height: 100%;
@@ -43,3 +44,4 @@
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
+/*ex:end:progress-bar-style*/
