--- a/examples/web/layout/templ/layout/layout.templ
+++ b/examples/web/layout/templ/layout/layout.templ
@@ -31,6 +31,7 @@ templ Wrapper(title string, className ...string) {
 				)... }
 			/>
 			<script src="https://unpkg.com/htmx.org@1.9.10"></script>
+			<script src="https://unpkg.com/htmx.org@1.9.10/dist/ext/class-tools.js"></script>
 			<link
 				rel="stylesheet"
 				href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
