improve classnames interface, and add an example

--- a/examples/web/examples/extempl/examples.templ
+++ b/examples/web/examples/extempl/examples.templ
@@ -52,6 +52,11 @@ templ Page() {
 					"Progress Bar",
 					"Demonstrates a job-runner like progress bar",
 				)
+				@exampleRow(
+					"/examples/templ/class-tools/",
+					"Class Tools",
+					"Demo of class-tools options",
+				)
 			</tbody>
 		</table>
 	}
