try older flush method

--- a/examples/web/sse_ex/extempl/sse.templ
+++ b/examples/web/sse_ex/extempl/sse.templ
@@ -32,7 +32,7 @@ templ Page() {
 			</code>
 		</pre>
 		<p>
-			The new elements uses the sse.Connect attribute to connect to a server-side event streaming countdown.
+			The new elements uses the sse.Connect attribute to connect to a server-sent event streaming countdown.
 		</p>
 		<pre>
 			<code class="language-go">
